--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,14 @@
   },
   "require": {
     "php": "^8.1",
-    "friendsofphp/php-cs-fixer": "^3.15"
+    "friendsofphp/php-cs-fixer": "^v3.38.0"
   },
   "autoload": {
     "psr-4": {
       "SquidIT\\PhpCodingStandards\\": "src/"
     }
+  },
+  "scripts": {
+    "fix": "php-cs-fixer fix"
   }
 }
