--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -49,4 +49,4 @@ jobs:
         run: "find src -name *.php | xargs -n 1 php -l"
 
       - name: "Check coding standards"
-        run: "vendor/bin/php-cs-fixer fix -v --dry-run"
+        run: "PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix -v --dry-run"
