Added phpstan rules

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 composer.lock
 .idea/
+.development/
 .php_cs.cache
 .php-cs-fixer.cache
 vendor/
@@ -7,5 +8,6 @@ vendor/
 .AGENT.md
 AGENT.md
 AGENTS.md
+CLAUDE.md
 /var
 
